--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .fh5co-cover {
     height: 600px;
+    background-position: -350px 0px !important;
   }
 }
 .fh5co-cover .display-t,
@@ -338,6 +339,7 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover-sm {
     height: 400px;
+    background-position: -150px 0px !important;
   }
 }
 .fh5co-cover.fh5co-cover-sm .display-t,
