--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 a {
-  color: #B15529;
+  color: #b8704e;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #B15529;
+  color: #b8704e;
   outline: none;
   text-decoration: none;
 }
@@ -71,17 +71,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #B15529;
+  background: #b8704e;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #B15529;
+  background: #b8704e;
 }
 
 ::selection {
   color: #fff;
-  background: #B15529;
+  background: #b8704e;
 }
 
 .fh5co-nav {
@@ -103,7 +103,7 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
   line-height: 40px;
-  font-family: "Sacramento", Arial, serif;
+  font-family: 'Cormorant Garamond', serif;
 }
 .fh5co-nav a {
   padding: 5px 10px;
@@ -196,7 +196,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a {
-  color: #B15529;
+  color: #b8704e;
 }
 .fh5co-nav ul li.btn-cta a span {
   background: #fff;
@@ -296,13 +296,14 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-cover {
-  height: 900px;
+  height: 750px;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   width: 100%;
 }
-.fh5co-cover .overlay {
+.fh5co-cover .overlay,
+.fh5co-thank-you .overlay {
   z-index: 0;
   position: absolute;
   bottom: 0;
@@ -317,41 +318,43 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover {
-    height: 600px;
+    height: 500px;
     background-position: -350px 0px !important;
   }
 }
 .fh5co-cover .display-t,
 .fh5co-cover .display-tc {
-  height: 900px;
+  height: 750px;
   display: table;
   width: 100%;
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover .display-t,
   .fh5co-cover .display-tc {
-    height: 600px;
+    height: 500px;
   }
 }
 .fh5co-cover.fh5co-cover-sm {
-  height: 600px;
+  height: 300px;
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover-sm {
-    height: 400px;
+    background-size: auto;
+    height: 200px;
     background-position: -150px 0px !important;
   }
 }
 .fh5co-cover.fh5co-cover-sm .display-t,
 .fh5co-cover.fh5co-cover-sm .display-tc {
-  height: 600px;
+  height: 400px;
   display: table;
   width: 100%;
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover-sm .display-t,
   .fh5co-cover.fh5co-cover-sm .display-tc {
-    height: 400px;
+    background-size: auto;
+    height: 200px;
   }
 }
 
@@ -369,8 +372,12 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 100%;
 }
 #fh5co-counter .fh5co-heading h2,
-#fh5co-event .fh5co-heading h2 {
+#fh5co-event .fh5co-heading h2{
   color: #fff;
+}
+#fh5co-thank-you .fh5co-heading h2 {
+  color: #fff;
+  margin-top: 80px;
 }
 #fh5co-counter .fh5co-heading span,
 #fh5co-event .fh5co-heading span {
@@ -381,7 +388,8 @@ h1, h2, h3, h4, h5, h6, figure {
   font-weight: 600;
 }
 #fh5co-counter .overlay,
-#fh5co-event .overlay {
+#fh5co-event .overlay,
+#fh5co-thank-you .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -770,7 +778,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #B15529;
+  color: #b8704e;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -789,7 +797,7 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
 }
 .fh5co-contact-info ul li:before {
-  color: #B15529;
+  color: #b8704e;
   position: absolute;
   left: 0;
   top: .05em;
@@ -844,9 +852,9 @@ form label {
 #fh5co-counter .display-tc h1,
 .fh5co-cover .display-tc h1 {
   margin-bottom: 0px;
-  font-size: 100px;
+  font-size: 80px;
   line-height: 1.5;
-  font-family: "Sacramento", Arial, serif;
+  font-family: 'Cormorant Garamond', serif;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
@@ -881,7 +889,7 @@ form label {
 .fh5co-cover .display-tc .btn {
   padding: 15px 20px;
   background: #fff !important;
-  color: #B15529;
+  color: #b8704e;
   border: none !important;
   font-size: 14px;
   text-transform: uppercase;
@@ -944,14 +952,13 @@ form label {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: #B15529;
   margin: 0 4px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
   position: relative;
-  animation: pulse 1s ease infinite;
+  border: 1px solid white;
 }
 
 @keyframes pulse {
@@ -1001,7 +1008,6 @@ form label {
 #fh5co-couple,
 #fh5co-gallery,
 .fh5co-section {
-  padding: 7em 0;
   clear: both;
 }
 @media screen and (max-width: 768px) {
@@ -1039,13 +1045,12 @@ form label {
   left: 0;
   right: 0;
   z-index: 99;
-  animation: pulse 1s ease infinite;
 }
 .heart i {
   font-size: 20px;
   background: #fff;
   padding: 20px;
-  color: #B15529;
+  color: #b8704e;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -1067,8 +1072,8 @@ form label {
   }
 }
 .couple-half h3 {
-  font-family: "Sacramento", Arial, serif;
-  color: #B15529;
+  font-family: 'Cormorant Garamond', serif;
+  color: #b8704e;
   font-size: 30px;
 }
 .couple-half .groom, .couple-half .bride {
@@ -1161,7 +1166,7 @@ form label {
   height: 90px;
   font-size: 40px;
   line-height: 40px;
-  color: #B15529;
+  color: #b8704e;
 }
 .feature-center p, .feature-center h3 {
   margin-bottom: 30px;
@@ -1182,9 +1187,8 @@ form label {
   font-size: 60px;
   margin-bottom: 10px;
   line-height: 1.5;
-  font-weight: bold;
-  color: #B15529;
-  font-family: "Sacramento", Arial, serif;
+  color: #b8704e;
+  font-family: 'Cormorant Garamond', serif;
 }
 @media screen and (max-width: 768px) {
   .fh5co-heading h2 {
@@ -1218,7 +1222,7 @@ form label {
   display: block;
 }
 #fh5co-testimonial .wrap-testimony .testimony-slide span a.twitter {
-  color: #B15529;
+  color: #b8704e;
   font-weight: 300;
 }
 #fh5co-testimonial .wrap-testimony .testimony-slide figure {
@@ -1310,7 +1314,7 @@ form label {
   display: table-cell;
   vertical-align: middle;
   font-size: 30px;
-  color: #B15529;
+  color: #b8704e;
 }
 .feature-left .feature-copy {
   float: left;
@@ -1376,7 +1380,7 @@ form label {
 #fh5co-started .btn {
   height: 54px;
   border: none !important;
-  background: #B15529;
+  background: #b8704e;
   color: #fff;
   font-size: 16px;
   text-transform: uppercase;
@@ -1420,7 +1424,7 @@ form label {
 }
 .owl-carousel .owl-controls .owl-dot.active span {
   background: transparent;
-  border: 2px solid #B15529;
+  border: 2px solid #b8704e;
 }
 
 #fh5co-offcanvas {
@@ -1673,9 +1677,9 @@ form label {
 }
 
 .btn-primary {
-  background: #B15529;
+  background: #b8704e;
   color: #fff;
-  border: 2px solid #B15529;
+  border: 2px solid #b8704e;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #f366a3 !important;
@@ -1683,11 +1687,11 @@ form label {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #B15529;
-  border: 2px solid #B15529;
+  color: #b8704e;
+  border: 2px solid #b8704e;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #B15529;
+  background: #b8704e;
   color: #fff;
 }
 
@@ -1817,7 +1821,7 @@ form label {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #B15529;
+  border-color: #b8704e;
 }
 
 .row-pb-md {
@@ -1840,6 +1844,20 @@ form label {
 
 .js .animate-box {
   opacity: 0;
+}
+
+#fh5co-couple {
+  margin-top: 80px;
+  margin-bottom: 100px;
+}
+
+#fh5co-couple .fh5co-heading h2{
+  font-size: 50px;
+  color: #000;
+}
+
+#fh5co-couple .fh5co-heading h3{
+  color: #828282;
 }
 
 /*# sourceMappingURL=style.css.map */
