--- a/css/style.css
+++ b/css/style.css
@@ -316,10 +316,16 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
   z-index: 10;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 420px) {
   .fh5co-cover {
     height: 500px;
-    background-position: -350px 0px !important;
+    background-position: -330px 0px !important;
+  }
+}
+@media screen and (max-width: 768px) and (min-width: 421px) {
+  .fh5co-cover {
+    height: 500px;
+    background-position: 0px 0px !important;
   }
 }
 .fh5co-cover .display-t,
@@ -339,9 +345,9 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover-sm {
-    background-size: auto;
+    background-size: cover;
     height: 200px;
-    background-position: -150px 0px !important;
+    background-position: 0px 0px !important;
   }
 }
 .fh5co-cover.fh5co-cover-sm .display-t,
@@ -1864,4 +1870,9 @@ form label {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 768px) {
+  .simply-seconds-section {
+    display: none !important;
+  }
+}
 /*# sourceMappingURL=style.css.map */
