--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,11 @@ h1, h2, h3, h4, h5, h6, figure {
     background-position: 0px 0px !important;
   }
 }
+@media screen and (max-width: 860px) and (min-width: 769px) {
+  .fh5co-cover {
+    background-position: -250px 0px !important;
+  }
+}
 .fh5co-cover .display-t,
 .fh5co-cover .display-tc {
   height: 750px;
@@ -885,7 +890,7 @@ form label {
   #fh5co-header .display-tc h1,
   #fh5co-counter .display-tc h1,
   .fh5co-cover .display-tc h1 {
-    font-size: 30px;
+    font-size: 40px;
   }
 }
 #fh5co-header .display-tc h2,
